--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: RTConnect
 Type: Package
 Title: Tools for analyzing sales report files of iTunes Connect.
-Version: 0.1.1
-Date: 2013-07-27
+Version: 0.1.3
+Date: 2013-10-10
 Author: Yusuke Miyazaki
 Maintainer: Yusuke Miyazaki <miyazaki.dev@gmail.com>
 Description: Tools for analyzing sales report files of iTunes Connect.
-License: BSD_3_clause + file LICENSE
+License: GPL-3
 Depends: R (>= 2.14), graphics
-Packaged: 2013-07-26 18:05:20 UTC; yusuke
+Packaged: 2013-10-11 03:40:16 UTC; yusuke
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2013-07-26 20:18:22
+Date/Publication: 2013-10-11 07:35:43
